feat: complete blog customization - update fonts, styling, content and README

--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource/karla": "^5.0.18",
+    "@fontsource/noto-sans": "^5.2.7",
+    "@fontsource/noto-serif": "^5.2.7",
+    "@fontsource/noto-serif-jp": "^5.2.6",
     "@fontsource/shippori-mincho-b1": "^5.2.6",
+    "@fortawesome/fontawesome-free": "^7.0.0",
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.21",
     "astro": "^4.13.4",
